2001-09-01 Andras Varga

	* _CONST patches made permanent: _CONST --> const, CONSTCAST() -->
        const_cast<>() replacements

        * Makefile.bc: cenum.cc, cstruct.cc added

2001-08-30 Andras Varga

	* MPI targets added to Makefile.vc too

2001-08-11 Andras Varga

	* added _CONSTs to all copy constructors, operator=()'s and dup()'s

2001-08-06  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* cnetmod.cc (isLocalMachineIn): Compile-Fix: changed const to
	_CONST in argument list.

2001-08-05 Andras Varga

	* added a few dozen new _CONSTs; affects nearly all files

2001-07-29 Andras Varga

	* added a bunch of _CONSTs (see changelog entry in include/)

2001-07-11 Andras Varga

	* mpi/* added, Makefile.in: Eric Wu's Tru64/MPI port

2001-07-02 Andras Varga
   
        * cenum.cc,cstruct.cc: fixed, added to makefile.in and makefile.vc. 
        Dependencies to be updated in both makefiles! Code still untested.

2001-06-28  Andras Varga

       	* cstruct.cc added: classes to support self-describing data structures,
        to be used for implementing message subclassing. UNTESTED. To be added
        to the makefile.

        * cenum.cc added: classes to support string mapping of enums. UNTESTED.
        To be added to the makefile.

2001-06-20  Ulrich Kaage  <kaage@int.uni-karlsruhe.de>

	* Makefile.in (depend): added -I../../include

	* carray.cc (): const patches
	added functions:
		const void *cBag::get(int m) const
		const cObject *cArray::get(int m) const
		const cObject *cArray::get(const char *objname) const

	* cgate.cc (): const patches
	
	* cmessage.cc (): const patches

	* cmodule.cc (): const patches
	added functions:
		cGate *cModule::gate(const char *s, int sn) const

	* cobject.cc (): const patches

	* cpar.cc (): const patches


2001-03-10 Andras Varga

	* ------ omnetpp-2.1 released ------

	* Borland C++ support removed: I deleted the project files
	(*.ide). I added equivalent Makefile.bc files (generated from the