@@ -123,26 +123,8 @@ long cStructDescriptor::string2enum(const char *s, const char *enumname)
 
 //-----------------------------------------------------------
 
-cStructDescriptor::cStructDescriptor(const cStructDescriptor& cs)
-{
-    opp_error("Cannot copy itself"); //FIXME better msg
-}
-
-
 cStructDescriptor::~cStructDescriptor()
 {
-}
-
-cObject *cStructDescriptor::dup() const
-{
-    opp_error(eCANTDUP);
-    return NULL;
-}
-
-cStructDescriptor& cStructDescriptor::operator=(const cStructDescriptor& cs)
-{
-    opp_error("Assignment not supported");  //FIXME better msg
-    return *this;
 }
 
 cStructDescriptor *cStructDescriptor::createDescriptorFor(cObject *obj)
